--- a/src/content/posts/2023-12-01_advent_of_code.mdx
+++ b/src/content/posts/2023-12-01_advent_of_code.mdx
@@ -2,7 +2,7 @@
 title: Advent of Code 2023 (Rust) 🎄
 author: Gerben Veenhof
 description: Rust, a more complex typed and memory managed language. But still alike Java in some sort cases.
-tags: [AOC, Advent, Rust]
+tags: [AOC, Rust]
 date: 2023-12-01
 ---
 import Button from "../../components/Button.astro"
