--- a/src/content/posts/2021-12-27_advent_of_code.mdx
+++ b/src/content/posts/2021-12-27_advent_of_code.mdx
@@ -2,7 +2,7 @@
 title: Advent of Code 2021 (Java 17) 🎄
 author: Gerben Veenhof
 description: This year I had the ambition to actually use Java for Advent of Code (AOC). And needless to say, I got pretty far.
-tags: [AOC, Advent, Java]
+tags: [AOC, Java]
 date: 2021-12-27
 ---
 import Button from "../../components/Button.astro"
