feat: update front-page text for mistakes

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,6 +7,8 @@ tags: Gerben Veenhof, portfolio, works, posts, backend
 import Layout from "../layouts/Layout.astro";
 import Glide from "../components/Glide.astro";
 import LabelCollection from "../components/LabelCollection.astro";
+import Button from "../components/Button.astro"
+import FlexCenter from "../components/FlexCenter.astro"
 
 <Layout title="Home | Gerben Veenhof">
 
@@ -14,45 +16,52 @@ import LabelCollection from "../components/LabelCollection.astro";
 
 Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for things I am looking into for the future.
 
-## How it al started 🐣
+## How it al started 🐤
 
 I Started of my career with interests in computer science at a very young age. And took that to school where I choose to be an aspiring game developer.
-But soon found out that making games was almost the same as writing code for websites or other applications.
+But soon found out that making games was almost the same as writing code for websites or other applications in general.
+
 Hence, I started to learn a new and higher degree for application development.
-After graduation and having done 4 internships at different work environments, I am currently employed at [Sogeti](https://www.sogeti.nl/) and though them I am working for
-[ING](https://ing.nl/).
+After graduation and having done 4 internships at different work environments and different scales of companies, I am currently working for [Sogeti](https://www.sogeti.nl/) and though them I am working for
+[ING](https://ing.nl/), one of the major Dutch banks.
 
-## Experience with 🧑🏻‍💻
+## Experience with 👨🏻‍💻
 
-While I am learning lots of new things, here is a short list of things I am currenly working with and have experiences with:
+While I am learning lots of new things every day, here is a short list of things I am currenly working with and have experiences with.
+The best thing is to check my to see where I have worked before with more details. 
+
+<FlexCenter>
+  <Button href="https://www.linkedin.com/in/gerbenveenhof/">My LinkedIn page</Button>
+</FlexCenter>
+### Some things
 
 - <LabelCollection
     name="Backend: "
-    labels={["Java", "Kotlin", "Rust", "Ruby", "Python", "PHP", "C# with Unity"]}
+    labels={["Java 🔥", "Rust", "Kotlin", "Ruby", "Python", "PHP", "C# (with Unity)"]}
   />
 - <LabelCollection
     name="Databases: "
-    labels={["Cassandra", "PostgreSQL", "MySQL"]}
+    labels={["Cassandra 🔥", "PostgreSQL", "MySQL"]}
   />
 - <LabelCollection
     name="Cloud: "
-    labels={["OpenShift", "AWS", "Azure"]}
+    labels={["OpenShift 🔥", "Azure", "AWS"]}
   />  
 - <LabelCollection
     name="Frontend: "
-    labels={["Astro", "Vue", "Angular", "NPM",]}
+    labels={["Astro 🔥", "Vue", "NPM", "Angular"]}
   />
 - <LabelCollection
     name="Tooling: "
-    labels={["Docker", "Podman", "Jetbrains/Intellij", "VSCode", "DBeaver",]}
+    labels={["Docker", "Podman", "Intellij", "VSCode", "DBeaver"]}
   />
 
-_(From recetly used to last used)_
+(From recently used to last used, where a 🔥 indicates the most experience overal)
 
-## The Future 🚀
+## The Future ⏩
 
-Things I want to look at in the future that peak my intrests include things like C/C++ and Rust. I really want to learn more lower level languages as well.
-So for 2023's Advent of Code I might try out one of these languages.
+Things I want to look at in the future that peak my intrests include things like C/C++ together with Linux (Arch maybe), because I really want to learn more lower level languages as well.
+I already have checked out Rust in the 2023's Advent of Code and I am really liking it this far.
 
 <Glide />
 
