--- a/src/content/posts/2021-02-15_work_ethics_at_a_big_company.mdx
+++ b/src/content/posts/2021-02-15_work_ethics_at_a_big_company.mdx
@@ -2,7 +2,9 @@
 title: Work Ethics at a big Company 🧑🏻‍💻
 author: Gerben Veenhof
 description: This year I am going to complete my study by finishing it with my thesis. Which I am very thrilled about, because I could choose the subject myself this time.
-tags: [Thesis, Internship]
+tags: 
+    - Thesis
+    - Internship
 date: 2021-02-15
 ---
 
