--- a/src/content/works/keydungeon.mdx
+++ b/src/content/works/keydungeon.mdx
@@ -6,7 +6,10 @@ date: 2021-08-09
 image: ../../assets/images/works/keydungeon.png
 image_alt: Keydungeon Password Manager
 description: Keydungeon is a passwordmanager writen in PHP, can generate passwords, see login details and more.
-tags: [Passwords, PHP, Javascript]
+tags: 
+  - Passwords
+  - PHP
+  - Javascript
 category: PHP/JS
 ---
 
