--- a/src/content/works/scrapyard.mdx
+++ b/src/content/works/scrapyard.mdx
@@ -6,7 +6,11 @@ date: 2020-10-28
 image: ../../assets/images/works/scrapyard.png
 image_alt: Scrapyard Minecraft Mod
 description: Scrapyard is a mod collection of weird ideas I wanted to build but not put in a separete mod.
-tags: [Minecraft, Modding, Mods, Java]
+tags: 
+  - Minecraft
+  - Modding  
+  - Mods 
+  - Java
 category: Java
 ---
 
