--- a/src/content/posts/2023-08-29_the_state_of_winget.mdx
+++ b/src/content/posts/2023-08-29_the_state_of_winget.mdx
@@ -2,7 +2,10 @@
 title: The state of Winget as a package manager 📦
 author: Gerben Veenhof
 description: For everyone using Windows, the time in finally now to use Winget 📦!
-tags: [ Packages, Winget, Windows ]
+tags: 
+    - Packages
+    - Winget 
+    - Windows
 date: 2023-08-29
 ---
 import Button from "../../components/Button.astro"
