--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -6,7 +6,9 @@ date: 2020-11-26
 image: ../../assets/images/works/aq3d_bot.png
 image_alt: AQ3D Bot in Discord
 description: A Discord bot once made to get the server status and other information. Superseeded by a new bot of the Discord owner.
-tags: [Discord, Java]
+tags: 
+  - Discord
+  - Java
 category: Java
 ---
 
