fix:  descriptions not working

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ import LabelCollection from "../components/LabelCollection.astro";
 import Button from "../components/Button.astro"
 import FlexCenter from "../components/FlexCenter.astro"
 
-<Layout title="Home | Gerben Veenhof">
+<Layout title={frontmatter.title} description={frontmatter.description}>
 
 # My programming and coding odyssey
 
