feat: add prettier formatting

--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -2,34 +2,39 @@
 title: Ruby Miner 💎
 author: Gerben Veenhof
 description: In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
-tags: 
-    - Ruby
-    - Internship
+tags:
+  - Ruby
+  - Internship
 date: 2020-06-29
 ---
-import Button from "../../components/Button.astro"
-import FlexCenter from "../../components/FlexCenter.astro"
+
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
 import { Image } from "astro:assets";
 
-import AdventOfCode from "../../assets/images/posts/advent_of_code.png"
+import AdventOfCode from "../../assets/images/posts/advent_of_code.png";
 
 In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
 
-So as a beginning ruby developer I always wonderd why nowhere in schools we got some Ruby. 
+So as a beginning ruby developer I always wonderd why nowhere in schools we got some Ruby.
 It's either beginning with something easy like [Python](https://python.org/) and when being more experienced it was using a combination of [Java](https://www.java.com/nl/),
- [C# .NET](https://dotnet.microsoft.com/) and Javascript frameworks like [Angular](https://angular.io/) and [Vue](https://vuejs.org/).
+[C# .NET](https://dotnet.microsoft.com/) and Javascript frameworks like [Angular](https://angular.io/) and [Vue](https://vuejs.org/).
 
 While we did get tought the basics of Dynamic languages, we has to learn a lot on our own on that side of the fence. Any documentation is always very welcomed for us backend developers.
 
-As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019) using Ruby. 
+As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019) using Ruby.
 While at first I still had some things to learn because I never used them. The basics where there. And could quickly adapt to new Gems to use.
 
 <Image src={AdventOfCode} alt="Advent of Code" format="avif" />
 
-I didn't finish it, but I aspire to try to challenge myself to jump right down each year with another language. 
-Next year I am going to choose Python as this is an easier language that I also wanted to try, as it is close to Ruby in some kind of sense. 
+I didn't finish it, but I aspire to try to challenge myself to jump right down each year with another language.
+Next year I am going to choose Python as this is an easier language that I also wanted to try, as it is close to Ruby in some kind of sense.
 
 <FlexCenter>
-    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
-    <Button href="https://www.ruby-lang.org/en/" icon="fontisto:ruby">Ruby Documentation</Button>
+  <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">
+    Advent of Code Repository
+  </Button>
+  <Button href="https://www.ruby-lang.org/en/" icon="fontisto:ruby">
+    Ruby Documentation
+  </Button>
 </FlexCenter>
