--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -2,10 +2,11 @@
 title: An actual usefull Docker Alternative 🐋
 author: Gerben Veenhof
 description: Using something else then Docker, is there even something else just as good? I get the question a lot on my work.
-tags: 
-    - Containers
+tags:
+  - Containers
 date: 2022-09-07
 ---
+
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 import { Image } from "astro:assets";
@@ -49,5 +50,7 @@ winget install RedHat.Podman-Desktop
 Or check out their website and download it manually:
 
 <FlexCenter>
-    <Button href="https://podman-desktop.io/" icon="ph:link-bold">Podman Desktop Website</Button>
+  <Button href="https://podman-desktop.io/" icon="ph:link-bold">
+    Podman Desktop Website
+  </Button>
 </FlexCenter>
