--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -2,19 +2,19 @@
 title: Gone with the old, In with the 🆕
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
-tags: 
-    - Portfolio 
-    - Astro
-    - JavaScript
-    - MDX
+tags:
+  - Portfolio
+  - Astro
+  - JavaScript
+  - MDX
 date: 2023-02-23
 ---
-import Button from "../../components/Button.astro"
-import FlexCenter from "../../components/FlexCenter.astro"
 
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
 
-If you have seen my older website and looked under the hood, then you might have noticed that I have switched to Astro. 
-I had some Vue.js experience with older projects that I made in the past and I am also learning the composition API in Vue 3. 
+If you have seen my older website and looked under the hood, then you might have noticed that I have switched to Astro.
+I had some Vue.js experience with older projects that I made in the past and I am also learning the composition API in Vue 3.
 Now, one of my friends mentioned that I might be intrested in Nuxt because of this.
 
 ## The Nuxt Framework 🔨
@@ -37,7 +37,7 @@ So I had to bite the bullet. Do I go with something else or wait for a fix?
 I first started looking on sites like [JamStack.org](https://jamstack.org/generators/) for some inspiration, and found Astro being kind of new and with lots of support.
 I dove deep in to try Astro and the current site that you're on is the result, so check it out.
 
-Of course I didn't have a complete smooth ride migrating everything to Astro. 
+Of course I didn't have a complete smooth ride migrating everything to Astro.
 
 ## Migration problems 🔜
 
@@ -50,6 +50,10 @@ And a lot more that I most likely already forgot, but the full change history is
 But with that said, I am very happy with how it turned out, and I will be maintaining it proudly for the next couple years 🤗
 
 <FlexCenter>
-    <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">Astro Portfolio Repository</Button>
-    <Button href="https://atsro.build/" icon="ph:link-bold">Build with Astro</Button>
+  <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">
+    Astro Portfolio Repository
+  </Button>
+  <Button href="https://atsro.build/" icon="ph:link-bold">
+    Build with Astro
+  </Button>
 </FlexCenter>
