--- a/src/content/posts/2024-12-01_advent_of_code.mdx
+++ b/src/content/posts/2024-12-01_advent_of_code.mdx
@@ -3,13 +3,14 @@ title: Advent of Code 2024 (Zig) 🎄
 author: Gerben Veenhof
 draft: true
 description: Zig is like Java but different
-tags: 
-    - AOC
-    - Zig
+tags:
+  - AOC
+  - Zig
 date: 2024-12-01
 ---
-import Button from "../../components/Button.astro"
-import FlexCenter from "../../components/FlexCenter.astro"
+
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
 
 ## Contents
 
@@ -32,5 +33,7 @@ import FlexCenter from "../../components/FlexCenter.astro"
 ## Day 9
 
 <FlexCenter>
-    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
+  <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">
+    Advent of Code Repository
+  </Button>
 </FlexCenter>
