--- a/src/content/works/korfbal_trainer.mdx
+++ b/src/content/works/korfbal_trainer.mdx
@@ -6,7 +6,7 @@ date: 2021-08-06
 image: ../../assets/images/works/korfbal_trainer.png
 image_alt: Korfbal Trainer Live App
 description: The Korfbal Trainer app is a small VueJS 3 application that can generate Korfbal Trainings from a selection of dynamic exercises.
-tags: 
+tags:
   - Korfbal
   - Vue
   - Vue3
@@ -51,6 +51,10 @@ export interface Category {
 I am, as of writing, still not done with the project. The generator needs some more attention before it is actually usable. But the collection of exercises is already available to look at. Which for our team, is a nice helping hand.
 
 <FlexCenter>
-  <Button href="https://github.com/nlxdodge/korfbal-trainer" icon="mdi:github">Korfbal Trainer Repository</Button>
-  <Button href="https://korfbal-trainer.netlify.app/" icon="ph:link-bold">Korfbal Trainer App</Button>
+  <Button href="https://github.com/nlxdodge/korfbal-trainer" icon="mdi:github">
+    Korfbal Trainer Repository
+  </Button>
+  <Button href="https://korfbal-trainer.netlify.app/" icon="ph:link-bold">
+    Korfbal Trainer App
+  </Button>
 </FlexCenter>
