--- a/src/content/works/scrapyard.mdx
+++ b/src/content/works/scrapyard.mdx
@@ -6,10 +6,10 @@ date: 2020-10-28
 image: ../../assets/images/works/scrapyard.png
 image_alt: Scrapyard Minecraft Mod
 description: Scrapyard is a mod collection of weird ideas I wanted to build but not put in a separete mod.
-tags: 
+tags:
   - Minecraft
-  - Modding  
-  - Mods 
+  - Modding
+  - Mods
   - Java
 category: Java
 ---
@@ -50,5 +50,7 @@ What I am still planning to build, or what I am working on at the moment:
 And some other people already re-created a Recycler as a mod, so I am still thinking of another name.
 
 <FlexCenter>
-  <Button href="https://github.com/nlxdodge/scrapyard" icon="mdi:github">Scrapyard Repository</Button>
+  <Button href="https://github.com/nlxdodge/scrapyard" icon="mdi:github">
+    Scrapyard Repository
+  </Button>
 </FlexCenter>
