--- a/src/content/posts/2021-12-27_advent_of_code.mdx
+++ b/src/content/posts/2021-12-27_advent_of_code.mdx
@@ -2,13 +2,14 @@
 title: Advent of Code 2021 (Java 17) 🎄
 author: Gerben Veenhof
 description: This year I had the ambition to actually use Java for Advent of Code (AOC). And needless to say, I got pretty far.
-tags: 
-    - AOC
-    - Java
+tags:
+  - AOC
+  - Java
 date: 2021-12-27
 ---
-import Button from "../../components/Button.astro"
-import FlexCenter from "../../components/FlexCenter.astro"
+
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
 
 This year I had the ambition to actually use Java for Advent of Code (AOC). And needless to say, I got pretty far before falling down because of time issues and trying to solve it in a good way. What I actually should have done is use the quick and dirty way where possible so that I didn't lose a lot of time.
 
@@ -38,5 +39,7 @@ String[][][] = new String[size][size][size];
 ```
 
 <FlexCenter>
-    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
+  <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">
+    Advent of Code Repository
+  </Button>
 </FlexCenter>
