--- a/src/content/works/keydungeon.mdx
+++ b/src/content/works/keydungeon.mdx
@@ -6,7 +6,7 @@ date: 2021-08-09
 image: ../../assets/images/works/keydungeon.png
 image_alt: Keydungeon Password Manager
 description: Keydungeon is a passwordmanager writen in PHP, can generate passwords, see login details and more.
-tags: 
+tags:
   - Passwords
   - PHP
   - Javascript
@@ -54,5 +54,7 @@ But for a portfolio of keydungeon it doesn't really matter to much, as I don't u
 I do plan to upgrade Keydungeon, but it's on the bottom of the list. So planning to make a new PHP API and a vue 3 front-end for starters.
 
 <FlexCenter>
-  <Button href="https://key.gerbenveenhof.nl/" icon="ph:link-bold">Keydungeon Website</Button>
+  <Button href="https://key.gerbenveenhof.nl/" icon="ph:link-bold">
+    Keydungeon Website
+  </Button>
 </FlexCenter>
